--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Big Data Training",
+  "name": "big-data-training",
   "version": "0.0.1",
   "description": "Big Data Training",
-  "homepage": "",
+  "homepage": "http://github.com/zohararad/big-data-training",
   "scripts": {
     "start": ""
   },
@@ -23,5 +23,15 @@
     "express": "~2.5.9",
     "mustache": "~0.7.2",
     "socket.io": "~0.9.13"
+  },
+  "devDependencies": {
+    "grunt-contrib-jshint": "~0.6.4",
+    "grunt-contrib-cssmin": "~0.4.1",
+    "grunt-contrib-uglify": "~0.2.4",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-sass": "~0.5.0",
+    "grunt-contrib-connect": "~0.4.1",
+    "grunt-zip": "~0.7.0",
+    "grunt": "~0.4.0"
   }
 }
